{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 282,
  "lineage": "0d574d6b-02b5-4d1b-f4cd-95f5d1b3cf4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "RAVIINSTANCE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b828c1c5ac3f13ee",
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:instance/i-00dd8797246d54a1a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dd8797246d54a1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DELL8.rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3ac14cd9cc4e3b7",
            "private_dns": "ip-10-120-0-197.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.120.0.197",
            "public_ip": "54.199.49.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3b32b8b5ea1e248",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012bb7448ee175f11",
            "tags": {
              "Name": "BLUE"
            },
            "tags_all": {
              "Name": "BLUE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3034a6fc04ec25f"
            ]
          },
          "dependencies": [
            "aws_security_group.Mysecurity",
            "aws_subnet.RAVISUBNET",
            "aws_vpc.RAVIVPC",
            "data.aws_ami_ids.ubuntu_2204"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b828c1c5ac3f13ee",
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:instance/i-07b37ef6a5b7b008b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b37ef6a5b7b008b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DELL8.rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050cb1c365631e34c",
            "private_dns": "ip-10-120-1-151.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.120.1.151",
            "public_ip": "54.249.178.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8e73677186adca7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a8d41e016530652",
            "tags": {
              "Name": "GREEN"
            },
            "tags_all": {
              "Name": "GREEN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3034a6fc04ec25f"
            ]
          },
          "dependencies": [
            "aws_security_group.Mysecurity",
            "aws_subnet.RAVISUBNET",
            "aws_vpc.RAVIVPC",
            "data.aws_ami_ids.ubuntu_2204"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myinternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:internet-gateway/igw-00af79e079c5aac96",
            "id": "igw-00af79e079c5aac96",
            "owner_id": "145038884830",
            "tags": {
              "Name": "myinternet"
            },
            "tags_all": {
              "Name": "myinternet"
            },
            "vpc_id": "vpc-0720b1643e16de6b0"
          },
          "dependencies": [
            "aws_vpc.RAVIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:route-table/rtb-0ab1487cd12c5212c",
            "id": "rtb-0ab1487cd12c5212c",
            "owner_id": "145038884830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00af79e079c5aac96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutetable"
            },
            "tags_all": {
              "Name": "myroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720b1643e16de6b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myinternet",
            "aws_vpc.RAVIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tableassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0526dc38fde82d789",
            "route_table_id": "rtb-0ab1487cd12c5212c",
            "subnet_id": "subnet-012bb7448ee175f11"
          },
          "dependencies": [
            "aws_internet_gateway.myinternet",
            "aws_route_table.myroutetable",
            "aws_subnet.RAVISUBNET",
            "aws_vpc.RAVIVPC"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0050f19bb58d2afaa",
            "route_table_id": "rtb-0ab1487cd12c5212c",
            "subnet_id": "subnet-01a8d41e016530652"
          },
          "dependencies": [
            "aws_internet_gateway.myinternet",
            "aws_route_table.myroutetable",
            "aws_subnet.RAVISUBNET",
            "aws_vpc.RAVIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Mysecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:security-group/sg-0e3034a6fc04ec25f",
            "description": "all rules",
            "egress": [],
            "id": "sg-0e3034a6fc04ec25f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Mysecurity",
            "name_prefix": "",
            "owner_id": "145038884830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mysecurity"
            },
            "tags_all": {
              "Name": "Mysecurity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0720b1643e16de6b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.RAVISUBNET",
            "aws_vpc.RAVIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "RAVISUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:subnet/subnet-012bb7448ee175f11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.120.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012bb7448ee175f11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145038884830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUB1"
            },
            "tags_all": {
              "Name": "SUB1"
            },
            "vpc_id": "vpc-0720b1643e16de6b0"
          },
          "dependencies": [
            "aws_vpc.RAVIVPC"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:subnet/subnet-01a8d41e016530652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.120.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a8d41e016530652",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145038884830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUB2"
            },
            "tags_all": {
              "Name": "SUB2"
            },
            "vpc_id": "vpc-0720b1643e16de6b0"
          },
          "dependencies": [
            "aws_vpc.RAVIVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RAVIVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:vpc/vpc-0720b1643e16de6b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0b0a1ae532193a430",
            "default_route_table_id": "rtb-079bcbe04c2f1ffc3",
            "default_security_group_id": "sg-050e54d87331afeda",
            "dhcp_options_id": "dopt-014b3239999ba8661",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0720b1643e16de6b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079bcbe04c2f1ffc3",
            "owner_id": "145038884830",
            "tags": {
              "Name": "RAVIVPC"
            },
            "tags_all": {
              "Name": "RAVIVPC"
            }
          }
        }
      ]
    }
  ]
}